--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     max-width: 800px;
     margin: 40px auto;
     padding: 20px;
-    background-color: #f7f7f7;
+    background-color: #a6f6eb;
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
